@@ -477,7 +477,7 @@ class ServerManager implements HConstants {
       
       // Should we tell it close regions because its overloaded?  If its
       // currently opening regions, leave it alone till all are open.
-      if ((openingCount < this.nobalancingCount)) {
+      if (openingCount < this.nobalancingCount) {
         this.master.regionManager.assignRegions(serverInfo, mostLoadedRegions,
             returnMsgs);
       }
