@@ -64,6 +64,7 @@ Release 0.20.1 - Unreleased
                away from the HBase cluster (Andrei Dragomir via Stack)
    HBASE-1879  ReadOnly transactions generate WAL activity (Clint Morgan via Stack)
    HBASE-1875  Compression test utility (elsif via Stack)
+   HBASE-1832  Faster enable/disable/delete
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
